# sudoku

./: .gitignore  .travis.yml  BlockChecker.cpp  BlockChecker.h  BlockCheckerTest.cpp  CMakeLists.txt  IDEAS.md  LICENSE  README.md  Sudoku.cpp  Sudoku.h  SudokuSquare.cpp  SudokuSquare.h  SudokuSquareTest.cpp  SudokuTest.cpp  TODO.md  appveyor.yml  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: BlockChecker.cpp  BlockChecker.h  BlockCheckerTest.cpp  CMakeLists.txt  KillerBlockChecker.cpp  KillerBlockChecker.h  Progressbar.cpp  Progressbar.h  SmallKillerBlockChecker.cpp  SmallKillerBlockChecker.h  SmartSolver.cpp  SmartSolver.h  SolveStats.cpp  SolveStats.h  Square.cpp  Square.h  SquareTest.cpp  Sudoku.cpp  Sudoku.h  SudokuSquare.h  SudokuSquareTest.cpp  SudokuTest.cpp  benchmarks.cpp  main.cpp
src/core/: BitSet.cpp  BitSet.h  CMakeLists.txt  SudokuAlgorithms.h  UniqueBlock.h
src/killer/: CMakeLists.txt  KillerBlock.cpp  KillerBlock.h  KillerSums.h
test/: BlockCheckerTest.cpp  CMakeLists.txt  ConstexprTests.cpp  KillerTest.cpp  SmartSolverTest.cpp  SquareTest.cpp  SudokuAlgorithmsTest.cpp  SudokuTest.cpp  UniqueBlockTest.cpp  catch_main.cpp
